# C-

./: desktop.ini
1/Ceva/: Ceva.layout  main.cpp
1/Euler/: Euler.depend  Euler.layout  ciclueuler.in  date.out  main.cpp
1/Fast/: Fast.layout  main.cpp
1/IntroducereInAlgoritmi/: Codes - Shortcut.lnk
1/Lee/: .alpinist.cpp.swp  Leee.cpp  a.out  alpinist.cpp
1/Nu stiu/: Backtracking.cpp  Comori.cpp  GenAran.cpp  God.cpp  Trytobegod.cpp  ceva.cpp  cmmdc.cpp  comb.cpp  divpanalaa.cpp  fadskjhf.cpp  fibb.cpp  nume1.cpp  primefi.cpp  problemaabsoluta.cpp  subm.cpp  sumacifrpare.cpp  superprim.cpp  zicangur.cpp
1/Pbinfo/: 106.cpp  108.cpp  1281.cpp  (+40 more)
CF-456/: B.cpp  C.cpp  CMakeLists.txt  main.cpp
CF-EC-35/: CMakeLists.txt  main.cpp
CF454/: CMakeLists.txt  main.cpp
CodeChef/: ABX01  ABX01.cpp  CMakeLists.txt  MAXSC.cpp  NW1.cpp  RECTANGL.cpp  main.cpp
GameSnake/: fun.cpp  main  main.cpp
GoodBye2017-CF/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  a.out
GraphsCourse/: generate.cpp
Hei/: main.cpp
OOP/Lab 5-6/Lab 5-6/Lab 5-6/: CMakeLists.txt  Controller.cpp  Controller.h  DynamicArray.cpp  DynamicArray.h  Filter.h  Header.h  Makefile  Repo.cpp  Repo.h  Tutorial.cpp  Tutorial.h  Tutorial.hpp  UI.cpp  UI.h  Watchlist.cpp  Watchlist.h  hei.cpp  hei.h  main.cpp  sha256.cpp  sha256.h  something.cpp
OOP/Lab5-6STL/: CMakeLists.txt  FileWatchlist.cpp  FileWatchlist.h  HTMLWatchlist.cpp  TutorialValidator.h  UI.cpp  Untitled.mdj  Utils.cpp  Watchlist.cpp  Watchlist.h  main.cpp  untitled.pro
OOP/untitled/: CMakeLists.txt  main.cpp
OOP/untitled/Tests/: ClassName.h  test.cpp
UVA/: 104 - Arbitrage.cpp  10793 - The Orc Attack.cpp  272 - TEX Quotes.cpp  336 - A Node Too Far.cpp  3655 - Onion Layers.cpp  567 - Risk.cpp  821 - Page Hopping.cpp
testProject/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt
(+1849 files in other folders)
